<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pd_40dp"
    android:paddingTop="@dimen/pd_40dp"
    android:paddingRight="@dimen/pd_40dp"
    tools:context=".Usuario">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/pd_10dp"
        android:text="@string/tp"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/pd_20sp"
        android:textStyle="bold">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Pregunta 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/icons"
            android:orientation="vertical"
            android:padding="@dimen/pd_10dp"
            android:layout_marginBottom="@dimen/pd_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/icons"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tp1"
                    android:textColor="@color/primary_dark"
                    android:textSize="@dimen/pd_20sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pg_1"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/pd_20sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/icons"
                android:orientation="vertical">

                <!-- Pregunta 1 -->
                <RadioGroup
                    android:id="@+id/p1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/icons">

                    <!-- Respuesta 1 -->
                    <RadioButton
                        android:id="@+id/p1a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_a"
                        android:textColor="#000">

                    </RadioButton>

                    <!-- Respuesta 2 -->
                    <RadioButton
                        android:id="@+id/p1b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_b"
                        android:textColor="#000">

                    </RadioButton>

                    <!-- Respuesta 3 -->
                    <RadioButton
                        android:id="@+id/p1c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_c"
                        android:textColor="#000">

                    </RadioButton>

                    <!-- Respuesta 4 -->
                    <RadioButton
                        android:id="@+id/p1d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_d"
                        android:textColor="#000">

                    </RadioButton>
                </RadioGroup>

                <Button
                    android:id="@+id/bt_vp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/pd_10dp"
                    android:text="@string/bt_v"
                    android:onClick="v_p1"
                    android:textColor="@drawable/txt_btn_dos"
                    android:background="@drawable/btn_dos"
                    android:layout_marginBottom="@dimen/pd_40dp">

                </Button>

            </LinearLayout>

            <!--        Pregunta 2-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/icons"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tp1"
                    android:textColor="@color/primary_dark"
                    android:textSize="@dimen/pd_20sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pg_1"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/pd_20sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/icons"
                android:orientation="vertical">

                <!-- Pregunta 1 -->
                <RadioGroup
                    android:id="@+id/p2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/icons">

                    <!-- Respuesta 1 -->
                    <RadioButton
                        android:id="@+id/p2a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_a"
                        android:textColor="#000">

                    </RadioButton>

                    <!-- Respuesta 2 -->
                    <RadioButton
                        android:id="@+id/p2b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_b"
                        android:textColor="#000">

                    </RadioButton>

                    <!-- Respuesta 3 -->
                    <RadioButton
                        android:id="@+id/p2c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_c"
                        android:textColor="#000">

                    </RadioButton>

                    <!-- Respuesta 4 -->
                    <RadioButton
                        android:id="@+id/p2d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pd_10dp"
                        android:text="@string/rp1_d"
                        android:textColor="#000">

                    </RadioButton>
                </RadioGroup>

                <Button
                    android:id="@+id/bt_vp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/pd_10dp"
                    android:text="@string/bt_v"
                    android:onClick="v_p2"
                    android:textColor="@drawable/txt_btn_dos"
                    android:background="@drawable/btn_dos"
                    android:layout_marginBottom="@dimen/pd_40dp">

                </Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>